--- a/package.json
+++ b/package.json
@@ -6,12 +6,26 @@
   "repository": "https://github.com/angular/angular-phonecat",
   "license": "MIT",
   "dependencies": {
+    "@angular/common": "~4.3.4",
+    "@angular/compiler": "~4.3.4",
+    "@angular/core": "~4.3.4",
+    "@angular/forms": "~4.3.4",
+    "@angular/http": "~4.3.4",
+    "@angular/platform-browser": "~4.3.4",
+    "@angular/platform-browser-dynamic": "~4.3.4",
+    "@angular/router": "~4.3.4",
+    "@angular/upgrade": "^7.2.13",
     "angular": "1.7.x",
     "angular-animate": "1.7.x",
+    "angular-in-memory-web-api": "~0.3.0",
     "angular-resource": "1.7.x",
     "angular-route": "1.7.x",
     "bootstrap": "3.3.x",
-    "jquery": "3.3.x"
+    "core-js": "^2.4.1",
+    "jquery": "3.3.x",
+    "rxjs": "5.0.1",
+    "systemjs": "0.19.40",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@types/angular": "^1.6.54",
@@ -21,17 +35,26 @@
     "@types/angular-resource": "^1.5.15",
     "@types/angular-route": "^1.7.0",
     "@types/angular-sanitize": "^1.3.7",
-    "@types/jasmine": "^3.3.12",
     "angular-mocks": "1.7.x",
     "cpx": "^1.5.0",
     "http-server": "^0.11.1",
-    "jasmine-core": "^3.3.0",
-    "karma": "^3.1.1",
-    "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.1.0",
-    "karma-jasmine": "^1.1.2",
-    "protractor": "^5.4.1",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.3",
+    "concurrently": "^3.2.0",
+    "lite-server": "^2.2.2",
+    "canonical-path": "0.0.2",
+    "tslint": "^3.15.1",
+    "lodash": "^4.16.4",
+    "jasmine-core": "~2.4.1",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~4.0.14",
+    "rimraf": "^2.5.4",
+    "@types/node": "^6.0.46",
+    "@types/jasmine": "2.5.36"
   },
   "scripts": {
     "tsc": "tsc",
@@ -41,7 +64,7 @@
     "postupdate-deps": "npm run copy-libs",
     "copy-libs": "cpx \"node_modules/{angular,angular-*,bootstrap/dist,jquery/dist}/**/*\" app/lib -C",
     "prestart": "npm install",
-    "start": "http-server ./app -a localhost -p 8000 -c-1",
+    "start": "http-server ./ -a localhost -p 8000 -c-1",
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
     "test-single-run": "npm test -- --single-run",
